Its a Small Change.

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Courcera!</title>
 </head>
 <body>
-<h1>Hello Courcera!</h1>
+<h1>Hello Courcera! Its a Great Course!</h1>
 </body>
 </html>
